--- a/thesis.bib
+++ b/thesis.bib
@@ -3646,3 +3646,40 @@ URL = {https://doi.org/10.1137/0216006},
   title = {Diffusion coefficients of neon,  krypton,  xenon,  carbon monoxide and nitric oxide in water at 10{\textendash}60{\textdegree}C},
   journal = {Chemical Engineering Science}
 }
+@article{Chen_2010,
+	doi = {10.1002/zaac.201000044},
+	url = {https://doi.org/10.1002%2Fzaac.201000044},
+	year = 2010,
+	month = {may},
+	publisher = {Wiley},
+	volume = {636},
+	number = {9-10},
+	pages = {1710--1715},
+	author = {Shuang Chen and Stefan Hoffmann and Yurii Prots and Jing-Tai Zhao and Rüdiger Kniep},
+	title = {Preparation, Crystal Structures and Thermal Decomposition of Ba$_2$({EDTA}) and Ba$_2$({EDTA})$\cdotp$2.5H$_2$O},
+	journal = {Z. anorg. allg. Chem.}
+}
+@article{Du_2010,
+	doi = {10.1039/b919675g},
+	url = {https://doi.org/10.1039%2Fb919675g},
+	year = 2010,
+	publisher = {Royal Society of Chemistry ({RSC})},
+	volume = {39},
+	number = {14},
+	pages = {3384},
+	author = {Yi Du and Amber L. Thompson and Nicola Russell and Dermot O{\textquotesingle}Hare},
+	title = {Resin-assisted solvothermal synthesis of transition metal{\textendash}organic frameworks},
+	journal = {Dalton Trans.}
+}
+@article{Xie_2011,
+	doi = {10.1039/c1cc10461f},
+	url = {https://doi.org/10.1039%2Fc1cc10461f},
+	year = 2011,
+	publisher = {Royal Society of Chemistry ({RSC})},
+	volume = {47},
+	number = {19},
+	pages = {5521--5523},
+	author = {Ming-Hua Xie and Xiu-Li Yang and Chuan-De Wu},
+	title = {A metalloporphyrin functionalized metal{\textendash}organic framework for selective oxidization of styrene},
+	journal = {Chem. Commun.}
+}
